Fix list and alignment text

--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -62,12 +62,16 @@
 }
 
 .recipe__list {
-	list-style-position: inside;
-	padding-left: var(--spacing-xxs);
+	list-style-position: outside;
+	padding-left: var(--spacing-lg);
 
 	display: flex;
 	flex-direction: column;
 	gap: var(--spacing-xxs);
+
+	li {
+		padding-left: 0.5rem;
+	}
 
 	li::marker {
 		font-size: var(--font-size-md);
@@ -78,7 +82,6 @@
 
 .recipe__list--preview {
 	li::marker {
-		font-size: 1rem;
 		color: var(--color-rose-800);
 	}
 }
